--- a/FinancialManagment/Designnn.ui
+++ b/FinancialManagment/Designnn.ui
@@ -29,7 +29,7 @@
     <property name="frameShadow">
      <enum>QFrame::Raised</enum>
     </property>
-    <widget class="QPushButton" name="SignUp">
+    <widget class="QToolButton" name="SignUp">
      <property name="geometry">
       <rect>
        <x>680</x>
@@ -37,6 +37,9 @@
        <width>93</width>
        <height>28</height>
       </rect>
+     </property>
+     <property name="mouseTracking">
+      <bool>true</bool>
      </property>
      <property name="text">
       <string>SignUp</string>
@@ -181,7 +184,7 @@
       <string>Report</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton_8">
+    <widget class="QPushButton" name="Profile">
      <property name="geometry">
       <rect>
        <x>10</x>
@@ -194,6 +197,22 @@
       <string>Profile</string>
      </property>
     </widget>
+    <widget class="QStackedWidget" name="stackedWidget">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>70</y>
+       <width>931</width>
+       <height>291</height>
+      </rect>
+     </property>
+     <property name="currentIndex">
+      <number>0</number>
+     </property>
+     <widget class="QWidget" name="page"/>
+     <widget class="QWidget" name="page_2"/>
+     <widget class="QWidget" name="page_3"/>
+    </widget>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -202,7 +221,7 @@
      <x>0</x>
      <y>0</y>
      <width>956</width>
-     <height>26</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
